Spiral Abyss Update

--- a/spiral-abyss/team_images/03-01-24/index.html
+++ b/spiral-abyss/team_images/03-01-24/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/cf392a34-a79a-4844-9221-1d553f4e8280?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/b26a74d1-efa9-4d18-8ebb-cfa10b935ed1?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.4 CYCLE 3<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.4 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: <br><br>Clearing with Diluc last cycle got me wanting to clear with other carries from the standard banner, which is why I ran a Keqing aggravate team this time. It was a little bit of a dicey proposition since I was relying on stats from Harbinger of Dawn while also not bringing a healer, but Kirara did an admirable job keeping her protected. On the other side, I wanted to try and optimize for killing the Wenut. In killing this annoying boss a few times, I've learned that (in addition to memorizing attack patterns), you are best served using characters with short damage windows, low cooldowns, and minimal setup. This is where mono hydro shines, particularly with Ayato as a driver. This is probably the first time I've defeated the Wenut without having to down it twice and I'm definitely going to use this strategy every time it appears in abyss moving forward.<br><br><br></p>
+<p><br><br>Comments: <br><br>I love character designs like Xianyun because of how they transform the meta. Diluc has been languishing as a character who basically only brings some raw damage that got outpaced by other characters who work better in his core teams. Now with Xianyun, he brings more raw power in a niche that he is peerless in still: plunging! It's not any easy team to control on mobile, but it hits like a truck and is satisfying when it does click. On the other side, since I was feeling nostalgic using Diluc (and also because I needed a bow), I ran Amber in a Hu Tao vape team. This is one of the few situations where she can also bring some high utility since it's easy to swirl pyro off her ult, Elegy of the End brings some good team buffs, and she can run Noblesse so Xingqiu doesn't have to. Fun team, though not as strong as some of Hu Tao's other options. More than enough for this cycle of abyss, though!<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
