--- a/spiral-abyss/team_images/03-19-24/index.html
+++ b/spiral-abyss/team_images/03-19-24/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/9b875168-8136-464f-94c8-5b48d2905628?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/cf392a34-a79a-4844-9221-1d553f4e8280?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.5 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.4 CYCLE 3<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: <br><br>I am fairly sure this is my first clear of Spiral Abyss using Cyno. In terms of characters I've "regretted" pulling for, he tops the list, but I have been determined to figure him out, and I think I am getting there. It certainly helps to have a superstar carry like Neuvillette on the first half to give me some extra time, but generally I think Cyno shines when you really sacrifice every other edge you can get on your team in favor of boosting his abilities. In this team, I had Baizhu using Instructor artifacts and Thrilling Tales of Dragon Slayers, Fischl is lending buffs through using Elegy of the End, and I think the only way this team could have been stronger is if I gave Zhongli Favonius Lance instead of Black Tassel to have some more energy recharge (or if I could have kept Sucrose to give VV shred instead of needing to change her out for a geo shield-buster for 12-3). Regardless, with this setup against a bunch of single target bosses, Cyno felt not just serviceable, but actually strong. May want to explore this further, as he has to be the last 5-star of mine to actually clear abyss.<br><br><br></p>
+<p><br><br>Comments: <br><br>Clearing with Diluc last cycle got me wanting to clear with other carries from the standard banner, which is why I ran a Keqing aggravate team this time. It was a little bit of a dicey proposition since I was relying on stats from Harbinger of Dawn while also not bringing a healer, but Kirara did an admirable job keeping her protected. On the other side, I wanted to try and optimize for killing the Wenut. In killing this annoying boss a few times, I've learned that (in addition to memorizing attack patterns), you are best served using characters with short damage windows, low cooldowns, and minimal setup. This is where mono hydro shines, particularly with Ayato as a driver. This is probably the first time I've defeated the Wenut without having to down it twice and I'm definitely going to use this strategy every time it appears in abyss moving forward.<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
