--- a/spiral-abyss/team_images/04-18-24/index.html
+++ b/spiral-abyss/team_images/04-18-24/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/e8b7c233-d3ea-400e-8102-81399600c3bd?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/9fb9b040-2dda-4489-b935-57c9eb65b8f6?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.5 CYCLE 3<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.5 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: <br><br>The first side of this abyss is truly made for Neuvillette. This is the third team variation I've used for him and he performs basically the same across all of them, which is to say very, very well. On the other side, I wanted to see who I could give a chance to shine, and I realized it's been a long time since I've taken Tighnari through. This aggravate team feels extremely strong, but I can't imagine it thriving outside of single-target scenarios. Otherwise, the only difficulty this run was Tighnari dying on the third chamber since I didn't have a healer and I didn't realize my Zhongli wasn't built for shield strength until after clearing. Oh well! It worked!<br><br><br></p>
+<p><br><br>Comments: <br><br>I am not too sure how much longer the plunge meta will be particularly well suited to spiral abyss, so I tried out a alternate version of a Diluc team that feels quite a bit more flexible than the Bennett variant. It also just s happened to make both of my teams 5-star only teams, which is a little unusual and novel. Without Furina to support Neuvillette on side one, I did the only sensible thing, which was plug in Childe to act as a burst support. It really didn't felt like he added much, but I guess that's kind of the thing with Neuvillette. He's clearly very strong, but it feels like he has only one real support for him. Everyone else provides some utility, sure, but almost all of it isn't as useful for him as it is for someone else. Anyway, that doesn't really matter because he still tears through everything just fine.<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
