Spiral Abyss Updates

--- a/spiral-abyss/team_images/05-02-24/index.html
+++ b/spiral-abyss/team_images/05-02-24/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/6a363c01-1b6a-4df8-856a-6bd2ab3ed9a1?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/e8b7c233-d3ea-400e-8102-81399600c3bd?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.6 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.5 CYCLE 3<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: <br><br>This was the first new abyss cycle since Arlecchino's release so obviously I had to test her out. In terms of saving for characters in this game, Fatui are auto-pulls for me, and Arlecchino's character and playstyle are so appealing to me that I spent through a ton of primos to get her C1 with her signature weapon. And guess what? She feels incredible. Very interesting kit design that feels unique (and STRONG) even in a crowded field of pyro dps characters. I also wasn't done with plunge play yet, as I have been really enjoying Diluc plunge, and with the blessing this cycle being all about pyro it worked out perfectly. Last couple of things to note here are that this abyss is definitely a spike in difficulty so I retried a lot more than I have lately (mostly because of someone dying rather than time, though). Also, for some reason, my end of cycle stats show my Diluc tanked over 200k damage, which is pretty wild (and goes to show how powerful Xianyun's healing can be). <br><br><br></p>
+<p><br><br>Comments: <br><br>The first side of this abyss is truly made for Neuvillette. This is the third team variation I've used for him and he performs basically the same across all of them, which is to say very, very well. On the other side, I wanted to see who I could give a chance to shine, and I realized it's been a long time since I've taken Tighnari through. This aggravate team feels extremely strong, but I can't imagine it thriving outside of single-target scenarios. Otherwise, the only difficulty this run was Tighnari dying on the third chamber since I didn't have a healer and I didn't realize my Zhongli wasn't built for shield strength until after clearing. Oh well! It worked!<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
