Spiral Abyss update

--- a/spiral-abyss/team_images/05-19-24/index.html
+++ b/spiral-abyss/team_images/05-19-24/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/d27c2891-4b86-4556-b6a1-1d4fee6125ad?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/f70f5584-898c-40c7-9c01-64ef8abd04da?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.6 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.6 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: <br><br>I like the idea of clearing abyss with the characters that are on the current banner and also clearing with characters I've never cleared with before, both of which were the main reasons behind these teams. I was initially a little fearful of using Lyney because of how fragile and single target he can be, but his burst can really wreck grouped enemies and Dehya feels surprisingly good as a defensive option who helps buff Lyney in a few different ways while also helping to maintain uptime on his artifact set bonus. As for the Arlecchino team, I was just looking for a way to make Tankfei work since I've never really been in a position where she'd be a good option as a damage dealer. Luckily, between Arlecchino's surprisingly great energy generation and Lynette being arguably the best battery/VV combo in the game, I was able to have good uptime on her shield while also boosting Arlecchino's attack from Thrilling Tales of Dragon Slayers. Hoping I can keep doing more creative teambuilding and eventually take every character on my account all the way through at least once!<br><br><br></p>
+<p><br><br>Comments: <br><br>This was the first new abyss cycle since Arlecchino's release so obviously I had to test her out. In terms of saving for characters in this game, Fatui are auto-pulls for me, and Arlecchino's character and playstyle are so appealing to me that I spent through a ton of primos to get her C1 with her signature weapon. And guess what? She feels incredible. Very interesting kit design that feels unique (and STRONG) even in a crowded field of pyro dps characters. I also wasn't done with plunge play yet, as I have been really enjoying Diluc plunge, and with the blessing this cycle being all about pyro it worked out perfectly. Last couple of things to note here are that this abyss is definitely a spike in difficulty so I retried a lot more than I have lately (mostly because of someone dying rather than time, though). Also, for some reason, my end of cycle stats show my Diluc tanked over 200k damage, which is pretty wild (and goes to show how powerful Xianyun's healing can be). <br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
