--- a/spiral-abyss/team_images/06-04-24/index.html
+++ b/spiral-abyss/team_images/06-04-24/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/bfdbcb7e-ab28-4537-9c4d-10947ad50e22?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/d27c2891-4b86-4556-b6a1-1d4fee6125ad?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.6 CYCLE 3<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.6 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: <br><br>After getting the idea in my head last cycle, I am now on a mission to clear abyss at least once with each character I have. This cycle I added three new characters to that list with Mona, Sayu, and Yun Jin all being part of my lineup. Clearing with Mona also marks a milestone: I have earned all 36 starts in abyss with every 5-star character I own at least once now. I'm not sure I'll get this ambitious in future cycles, as clearing with this setup this time was pretty difficult (i.e. I absolutely do not recommend these teams). The side objective here was also to continue demonstrating Hu Tao's relevance in the wake of Arlecchino's release. A lot of community members wonder if Father is just a direct powercreep of the Wangsheng Funeral Parlor director, and I'm not sure I see it that way. They both fulfill similar roles, but they almost never want to use the same teammates (though to be clear, they totally can). Perfect example here is how Hu Tao becomes a bit of a nuke dps with Mona and Bennett while Arlecchino can make full use of Yun Jin's normal attack buff in ways that Hu Tao can't. Anyway, hoping that Abyss stays at this point of difficulty so I can continue finding ways to bring more characters through abyss for the first time without having to retry fights 1,000 times.<br><br><br></p>
+<p><br><br>Comments: <br><br>I like the idea of clearing abyss with the characters that are on the current banner and also clearing with characters I've never cleared with before, both of which were the main reasons behind these teams. I was initially a little fearful of using Lyney because of how fragile and single target he can be, but his burst can really wreck grouped enemies and Dehya feels surprisingly good as a defensive option who helps buff Lyney in a few different ways while also helping to maintain uptime on his artifact set bonus. As for the Arlecchino team, I was just looking for a way to make Tankfei work since I've never really been in a position where she'd be a good option as a damage dealer. Luckily, between Arlecchino's surprisingly great energy generation and Lynette being arguably the best battery/VV combo in the game, I was able to have good uptime on her shield while also boosting Arlecchino's attack from Thrilling Tales of Dragon Slayers. Hoping I can keep doing more creative teambuilding and eventually take every character on my account all the way through at least once!<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
