Spiral abyss updates

--- a/spiral-abyss/team_images/08-21-24/index.html
+++ b/spiral-abyss/team_images/08-21-24/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<!-- <p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/c8217ae6-9f73-4e93-8d1a-ff2f2e9b6853?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4> -->
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/c8217ae6-9f73-4e93-8d1a-ff2f2e9b6853?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.8 CYCLE 1.2<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.8 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: <br><br>No video this time for a variety of reasons. I played poorly, was foolhardy in what kinds of teams/characters I could push through, my Arlecchino is missing a whole artifact (not to mention some other suspicious builds on other characters), etc. I tried recording it but my retries got so messy that it just wasn't worth it. These teams were what ended up clearing 12-3, though, so I'm counting it. Also, I'm counting a new character clear for abyss: Xinyan. Turns out if you build her to be a shield bot she's actually not bad. Perhaps not an ideal choice, but could be a good pyro addition to a Lyney team in the future.<br><br><br></p>
+<p><br><br>Comments: <br><br>I waited till I got Emilie to go through the abyss, and it resulted in one of my fastest clears yet. To be specific, I have to go back eight months to find an abyss clear that was faster than this one, and this enemy lineup has the largest hp pool of any lineup to date.<p> To talk teams: You won't see it in the overview stats since my Arlecchino already hits so hard, but having Emilie pile damage onto a team with arguably the two best pyro dps characters while all of them scale off of attack (which Bennett--of course--buffs) really does wonders for this team's ability to shred through basically anything without pyro immunity. As for the other side, I slightly modified my Neuvillette team to add some defensive utility with Beidou and fully leveled a Skyward Pride for her to let her build energy even as a solo electro. It was a lot comfier than the last clear of this lineup, though it's unclear whether this team would perform well enough to clear without the huge cushion that my first side team was able to establish for basically every chamber.<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
