--- a/shiyu-defense/index.html
+++ b/shiyu-defense/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/689b58c7-c0c7-4a40-805d-2b06acc064c8?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
+	<!-- <p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/c8217ae6-9f73-4e93-8d1a-ff2f2e9b6853?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4> -->
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 5.0 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.8 CYCLE 1.2<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: <br><br>Two more new characters through the abyss. Kinich is the unsurprising one, as he's one of the only Natlan character designs looks and feels good to me. The other was Kaeya, who I've possibly taken into abyss before but I don't know if I've actually cleared with him. I figured it was his time and I wanted to try Arlecchino in a melt team, which I honestly didn't love all that much. It's strong enough, though! That said, the highlight this cycle is definitely Kinich. With Emilie, Bennett, and Xiangling, his team feels very simple and strong, which frees you up to just enjoying his grappling mechanics.<br><br><br></p>
+<p><br><br>Comments: <br><br>No video this time for a variety of reasons. I played poorly, was foolhardy in what kinds of teams/characters I could push through, my Arlecchino is missing a whole artifact (not to mention some other suspicious builds on other characters), etc. I tried recording it but my retries got so messy that it just wasn't worth it. These teams were what ended up clearing 12-3, though, so I'm counting it. Also, I'm counting a new character clear for abyss: Xinyan. Turns out if you build her to be a shield bot she's actually not bad. Perhaps not an ideal choice, but could be a good pyro addition to a Lyney team in the future.<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
