Shiyu Defense Update

--- a/shiyu-defense/index.html
+++ b/shiyu-defense/index.html
@@ -47,37 +47,37 @@
 
 </style>
 	<head>
-		<title>Spiral Abyss Tracker</title>
+		<title>Shiyu Defense Tracker</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main-spiral.css" />
 <!--/* Link Preview Stuff */-->
 <!-- Primary Meta Tags -->
-<title>Spiral Abyss Tracker</title>
-<meta name="title" content="Genshin Impact Spiral Abyss Tracker">
+<title>Shiyu Defense Tracker</title>
+<meta name="title" content="ZZZ Shiyu Defense Tracker">
 <meta name="description" content="Check Out Stats and Video">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://smallscreen.info/spiral-abyss">
-<meta property="og:title" content="Spiral Abyss Tracker">
+<meta property="og:url" content="https://smallscreen.info/shiyu-defense">
+<meta property="og:title" content="Shiyu Defense Tracker">
 <meta property="og:description" content="Check Out Stats and Video">
 <!-- meta property="og:image" content="assets/images/sstv.png" -->
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://smallscreen.info/spiral-abyss">
-<meta property="twitter:title" content="Spiral Abyss Tracker">
+<meta property="twitter:url" content="https://smallscreen.info/shiyu-defense">
+<meta property="twitter:title" content="Shiyu Defense Tracker">
 <meta property="twitter:description" content="Check Out Stats and Video">
 <meta property="twitter:image" content="..assets/images/spiral.png">
 	
 	
 	</head>
 <body>
-	<!-- <p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/c8217ae6-9f73-4e93-8d1a-ff2f2e9b6853?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4> -->
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/c78a068c-9601-43e6-8b42-48f56e314581?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">All 7 Critical Nodes</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.8 CYCLE 1.2<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SHIYU DEFENSE VER. 1.2 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -86,23 +86,19 @@
 	<img src="team_images/photo-2.png" width="100%"></label></div>
 	<div class="click-zoom"><label><input type="checkbox">
 	<img src="team_images/photo-3.png" width="100%"></label></div>
-	<div class="click-zoom"><label><input type="checkbox">
-	<img src="team_images/photo-4.png" width="100%"></label></div>
 	</div>
 	<div class="column">
 	<h3 align="center">Team 2</h3>
 	<div class="click-zoom"><label><input type="checkbox">
+	<img src="team_images/photo-4.png" width="100%"></label></div>
+	<div class="click-zoom"><label><input type="checkbox">
 	<img src="team_images/photo-5.png" width="100%"></label></div>
 	<div class="click-zoom"><label><input type="checkbox">
 	<img src="team_images/photo-6.png" width="100%"></label></div>
-	<div class="click-zoom"><label><input type="checkbox">
-	<img src="team_images/photo-7.png" width="100%"></label></div>
-	<div class="click-zoom"><label><input type="checkbox">
-	<img src="team_images/photo-8.png" width="100%"></label></div>
 	</div>
 </div>
-	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: <br><br>No video this time for a variety of reasons. I played poorly, was foolhardy in what kinds of teams/characters I could push through, my Arlecchino is missing a whole artifact (not to mention some other suspicious builds on other characters), etc. I tried recording it but my retries got so messy that it just wasn't worth it. These teams were what ended up clearing 12-3, though, so I'm counting it. Also, I'm counting a new character clear for abyss: Xinyan. Turns out if you build her to be a shield bot she's actually not bad. Perhaps not an ideal choice, but could be a good pyro addition to a Lyney team in the future.<br><br><br></p>
+
+<p><br><br>Comments: <br><br>I have made a Shiyu Defense Tracker of the same mold of my Spiral Abyss one! Going to be honest: Did not anticipate seeing so much late-game success in Zenless Zone Zero this early as a free-to-play player. But I'm glad I am because it's *fun*. Just check out some of those clears (Not the sloppy ones, but like the at around the nine minute mark where I don't take a hit for either side of the node. Node 4, I think?. Anyway, the combat design in Zenless Zone Zero is somewhat strange and very fluid and I have a great time bending it to my will. It helps that some of my absolute favorite characters also happen to be free! We'll see how often I update these since I don't see my lineups changing all that much for the foreseeable future, but I plan to clear every Shiyu Defense refresh whenever it comes out!<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
