--- a/spiral-abyss/team_images/10-17-24/index.html
+++ b/spiral-abyss/team_images/10-17-24/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/9ff6fd52-513e-40ec-a142-f2a2b615279c?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/689b58c7-c0c7-4a40-805d-2b06acc064c8?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 5.1 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 5.0 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: <br><br>The most interesting abyss is a good long while! Having an entire side of the challenge revolve around your ability to break geo shields in addition to clear a damage check is new and cool and good. It's not great if you have an account like mine that has ignored several element archetypes in general because of how comparatively weak or unappealing they seem, like geo. But! I did pick up Xilonen and between her, Zhongli, and a flexible dps like Arlecchino I was able to make everything work. It seems like Hoyoverse knows this kind of check will be tricky so side one is a lot easier than normal. I decided to run the Dehya variant of the Kinich burn team and it feels really nice with Dehya on Sacrificial Greatsword. For as much as people are so down on her, I have gotten a lot of good use out of her.<br><br><br></p>
+<p><br><br>Comments: <br><br>Two more new characters through the abyss. Kinich is the unsurprising one, as he's one of the only Natlan character designs looks and feels good to me. The other was Kaeya, who I've possibly taken into abyss before but I don't know if I've actually cleared with him. I figured it was his time and I wanted to try Arlecchino in a melt team, which I honestly didn't love all that much. It's strong enough, though! That said, the highlight this cycle is definitely Kinich. With Emilie, Bennett, and Xiangling, his team feels very simple and strong, which frees you up to just enjoying his grappling mechanics.<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
