--- a/shiyu-defense/team_images/10-27-24/index.html
+++ b/shiyu-defense/team_images/10-27-24/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/774a586c-29f7-4900-a7cb-aaf611939f05?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">All 7 Critical Nodes</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/c78a068c-9601-43e6-8b42-48f56e314581?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">All 7 Critical Nodes</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SHIYU DEFENSE VER. 1.2 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SHIYU DEFENSE VER. 1.2 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -96,17 +96,9 @@
 	<div class="click-zoom"><label><input type="checkbox">
 	<img src="team_images/photo-6.png" width="100%"></label></div>
 	</div>
-	<h3 align="center">Team 3</h3>
-	<div class="click-zoom"><label><input type="checkbox">
-	<img src="team_images/photo-7.png" width="100%"></label></div>
-	<div class="click-zoom"><label><input type="checkbox">
-	<img src="team_images/photo-8.png" width="100%"></label></div>
-	<div class="click-zoom"><label><input type="checkbox">
-	<img src="team_images/photo-9.png" width="100%"></label></div>
-	</div>
 </div>
 
-<p><br><br>Comments: <br><br>This post was somewhat late because I wanted to build new characters before I posted another update. It seems like the main currency squeeze in Zenless for free players is upgrade materials so it took me a long time to build up Burnice as well as some teammates for her. I got Burnice because I love her character and playstyle, though I'm not entirely sold on playing teams built around anomaly. Currently its interactions are certainly novel but they don't feel as strong as just using a stunner and attacker. The game is still new so I'm sure this will evolve over time, but luckily this doesn't really matter as it pertains to Burnice because she is so flexible. I was able to slot her in to back up Billy just fine in the back half of this Shiyu Defense cycle, which I decided to do because of the electric resitances on the later nodes. Once again a smooth clear.<br><br><br></p>
+<p><br><br>Comments: <br><br>I have made a Shiyu Defense Tracker of the same mold of my Spiral Abyss one! Going to be honest: Did not anticipate seeing so much late-game success in Zenless Zone Zero this early as a free-to-play player. But I'm glad I am because it's *fun*. Just check out some of those clears (Not the sloppy ones, but like the at around the nine minute mark where I don't take a hit for either side of the node. Node 4, I think?. Anyway, the combat design in Zenless Zone Zero is somewhat strange and very fluid and I have a great time bending it to my will. It helps that some of my absolute favorite characters also happen to be free! We'll see how often I update these since I don't see my lineups changing all that much for the foreseeable future, but I plan to clear every Shiyu Defense refresh whenever it comes out!<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
