--- a/shiyu-defense/team_images/11-06-24/index.html
+++ b/shiyu-defense/team_images/11-06-24/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/045c91e6-7c57-4ee7-aadf-c4214cd9bddc?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">All 7 Critical Nodes</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/774a586c-29f7-4900-a7cb-aaf611939f05?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">All 7 Critical Nodes</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SHIYU DEFENSE VER. 1.2 CYCLE 3<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SHIYU DEFENSE VER. 1.2 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -96,9 +96,17 @@
 	<div class="click-zoom"><label><input type="checkbox">
 	<img src="team_images/photo-6.png" width="100%"></label></div>
 	</div>
+	<h3 align="center">Team 3</h3>
+	<div class="click-zoom"><label><input type="checkbox">
+	<img src="team_images/photo-7.png" width="100%"></label></div>
+	<div class="click-zoom"><label><input type="checkbox">
+	<img src="team_images/photo-8.png" width="100%"></label></div>
+	<div class="click-zoom"><label><input type="checkbox">
+	<img src="team_images/photo-9.png" width="100%"></label></div>
+	</div>
 </div>
 
-<p><br><br>Comments: <br><br>Just went with two teams here. Not much to say. I am hoping that ZZZ's challenge gets more interesting because it is starting to just feel like you need units that take advantage of elemental weaknesses and then just play half-decently to win. We'll see how it keeps progressing!<br><br><br></p>
+<p><br><br>Comments: <br><br>This post was somewhat late because I wanted to build new characters before I posted another update. It seems like the main currency squeeze in Zenless for free players is upgrade materials so it took me a long time to build up Burnice as well as some teammates for her. I got Burnice because I love her character and playstyle, though I'm not entirely sold on playing teams built around anomaly. Currently its interactions are certainly novel but they don't feel as strong as just using a stunner and attacker. The game is still new so I'm sure this will evolve over time, but luckily this doesn't really matter as it pertains to Burnice because she is so flexible. I was able to slot her in to back up Billy just fine in the back half of this Shiyu Defense cycle, which I decided to do because of the electric resitances on the later nodes. Once again a smooth clear.<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
