Shiyu Defense Update

--- a/shiyu-defense/team_images/11-22-24/index.html
+++ b/shiyu-defense/team_images/11-22-24/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/29fef6a4-1cdb-4fe9-a52e-234940f296f4?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">All 7 Critical Nodes</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/045c91e6-7c57-4ee7-aadf-c4214cd9bddc?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">All 7 Critical Nodes</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SHIYU DEFENSE VER. 1.3 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SHIYU DEFENSE VER. 1.2 CYCLE 3<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -98,7 +98,7 @@
 	</div>
 </div>
 
-<p><br><br>Comments: <br><br>Critical node reset and nothing changed for me. Nothing to see here but another quality clear!<br><br><br></p>
+<p><br><br>Comments: <br><br>Just went with two teams here. Not much to say. I am hoping that ZZZ's challenge gets more interesting because it is starting to just feel like you need units that take advantage of elemental weaknesses and then just play half-decently to win. We'll see how it keeps progressing!<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
