Spiral Abyss Update

--- a/spiral-abyss/team_images/12-24-24/index.html
+++ b/spiral-abyss/team_images/12-24-24/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/360dba9e-3260-4a0c-9149-afae6d318227?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/b639870b-d27b-4014-85e4-8b3f316283bd?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 5.2 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 5.1 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: <br><br>I got Chasca by accident going for Ororon, so now she needed to clear abyss. I do not like Chasca's character arc or her visual design, but I am surprised by how much I like how her kit works and feels. She seems like she has some high potential for unconventional team compositions and the big gun she rides is just really dumb and fun. On the front side of the abyss, I decided not to mess around and just brought a bunch of raw power so I could enjoy Chasca.<br><br><br></p>
+<p><br><br>Comments: <br><br>Another interesting abyss! I wanted to add another character to the "cleared floor 12 club" so I had Kachina support my Neuvillette team, which was straightfoward enough. The other side was the side where I needed to get more creative. To take advantage of the blessing, have the right tools, *and* be able to survive, I built a strange team with Arlecchino using Faruzan as a support. I settled on Faruzan because Zhongli was needed for the Tulpa (I initially tried clearing with Lyney with no shileder and it went... horribly) and I wanted some good pyro sub dps from Xiangling, but I still needed a bow for the flying boss on 12-2. As an anemo character, Faruzan still can hold VV artifacts so it worked quite well, though it's not exactly the most efficient use of her talents. A win's a win though so I'll take it!<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
