--- a/shiyu-defense/team_images/01-04-25/index.html
+++ b/shiyu-defense/team_images/01-04-25/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/7373af01-41c9-4375-a42e-a7df3d4b0236?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Critical Nodes 4-7</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/29fef6a4-1cdb-4fe9-a52e-234940f296f4?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">All 7 Critical Nodes</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SHIYU DEFENSE VER. 1.4 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SHIYU DEFENSE VER. 1.3 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -95,17 +95,10 @@
 	<img src="team_images/photo-5.png" width="100%"></label></div>
 	<div class="click-zoom"><label><input type="checkbox">
 	<img src="team_images/photo-6.png" width="100%"></label></div>
-	<h3 align="center">Team 3</h3>
-	<div class="click-zoom"><label><input type="checkbox">
-	<img src="team_images/photo-1.png" width="100%"></label></div>
-	<div class="click-zoom"><label><input type="checkbox">
-	<img src="team_images/photo-7.png" width="100%"></label></div>
-	<div class="click-zoom"><label><input type="checkbox">
-	<img src="team_images/photo-8.png" width="100%"></label></div>
 	</div>
 </div>
 
-<p><br><br>Comments: <br><br>Back to posting these clears since my teams changed slightly! Getting Harumasa has been great. He's really fun to play, though I didn't play him well in this run lol. That said, the place I needed him the most was on the electric-weak final boss and going all electric for that basically stunlocked it for the entire fight. Still loving this combat system a ton, especially now that I have some new ways to engage with it.<br><br><br></p>
+<p><br><br>Comments: <br><br>Critical node reset and nothing changed for me. Nothing to see here but another quality clear!<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
